--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Tandoori Paneer</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body >
     <h1>Akshay Sahu</h1>
-    <img src="https://uploads-ssl.webflow.com/60a6bf8ff99a7114bef9523f/61aa27674cc0ff8a7e9af55e_Banner.jpeg" alt="Tandoor">
-    <p><em>MCS Engineer</em></p>
+    <table cellspacing="20">
+        <td>
+            <img src="https://uploads-ssl.webflow.com/60a6bf8ff99a7114bef9523f/61aa27674cc0ff8a7e9af55e_Banner.jpeg" alt="Tandoor">
+        </td>
+        <td>
+            <p><em>MCS Engineer</em></p>
+        </td>
+    </table>
+    
+    
     <hr>
     <h3>Who am I</h3>
     <ul>
